--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -7,25 +7,25 @@
 }
 
 .portfolio-container {
-   // background: linear-gradient(137.86deg,#4a00d8,#7512b7 23.75%,#fc4d4e);
-   background-image: url('/header-bg-mac.jpg');
-   background-attachment: fixed; 
-   background-position: center;
-   background-repeat: no-repeat;
-   background-size: cover;
+    // background: linear-gradient(137.86deg,#4a00d8,#7512b7 23.75%,#fc4d4e);
+    background-image: url('/header-bg-mac.jpg');
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     width: 65%;
     z-index: 2;
     position: absolute;
     left: 0;
     overflow: hidden;
-    box-shadow: 0 6px 19px 0 rgba(0,0,0,.11);
+    box-shadow: 0 6px 19px 0 rgba(0, 0, 0, .11);
 }
 
 .portfolio-container-content {
     padding-left: 120px;
     padding-top: 70px;
     padding-right: 100px;
-    padding-bottom:70px;
+    padding-bottom: 70px;
     z-index: 4;
     box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);
     position: relative;
@@ -35,16 +35,16 @@
 
 
 .portfolio-container-content:before {
-	content: "";
-	position: absolute;
-	background: inherit;
-	z-index: -1;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	filter: blur(10px);
-	margin: -20px;
+    content: "";
+    position: absolute;
+    background: inherit;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    filter: blur(10px);
+    margin: -20px;
 }
 
 
@@ -62,6 +62,7 @@
         margin-bottom: 25px;
         color: #fff;
     }
+
     p {
         font-size: 22px;
         font-family: "Montserrat Light";
@@ -77,6 +78,7 @@
     justify-content: flex-start;
     align-items: center;
     margin-bottom: 25px;
+
     p {
         font-family: "Montserrat Regular";
         font-weight: 600;
@@ -85,12 +87,14 @@
         margin: 0;
         color: #fff;
     }
+
     .flat-line {
         background-color: rgb(216, 52, 52);
     }
 }
 
-.portfolio-items, .portfolio-items-mobile {
+.portfolio-items,
+.portfolio-items-mobile {
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -114,6 +118,7 @@
         cursor: pointer;
         transition: transform 0.2s ease-in-out, filter 0.2s ease-in-out;
     }
+
     img:hover {
         transform: translateY(-15px);
         filter: brightness(0.8)
@@ -127,13 +132,13 @@
     right: 0;
     top: 150px;
     background-color: #333;
-    background-image: url('/chiara-bg.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     height: 30.57143rem;
-    box-shadow: 0 6px 19px 0 rgba(0,0,0,.11);
+    box-shadow: 0 6px 19px 0 rgba(0, 0, 0, .11);
     padding: 70px;
+
     h2 {
         font-family: "Montserrat Bold";
         font-weight: 800;
@@ -142,6 +147,7 @@
         color: #fff;
         text-shadow: 2px 2px 8px #0F0023;
     }
+
     p {
         font-size: 22px;
         font-family: "Montserrat Light";
@@ -151,10 +157,11 @@
         width: 80%;
         text-shadow: 2px 2px 8px #0F0023;
     }
+
     a {
         font-family: "Montserrat Regular";
         font-weight: 600;
-        font-size: 13px;    
+        font-size: 13px;
         text-align: center;
         color: #fff;
         padding-left: 30px;
@@ -168,8 +175,9 @@
         letter-spacing: 1px;
         transition: transform 0.2s ease-in-out, background-color 0.2s ease-in-out;
         display: block;
-        width: 200px;
+        max-width: 245px;
     }
+
     a:hover {
         transform: translateX(15px);
         background-color: #ff3535;
@@ -190,86 +198,107 @@
 }
 
 // Extra small devices (portrait phones, less than 576px)
-@media (max-width: 575.98px) { 
+@media (max-width: 575.98px) {
     .section-portfolio {
         height: auto;
         padding-top: 70px;
         padding-bottom: 70px;
     }
-    .portfolio-bigimage, .portfolio-items, .portfolio-text-desktop {
+
+    .portfolio-bigimage,
+    .portfolio-items,
+    .portfolio-text-desktop {
         display: none;
-    } 
-    .portfolio-items-mobile, .portfolio-text-mobile {
+    }
+
+    .portfolio-items-mobile,
+    .portfolio-text-mobile {
         display: flex;
     }
+
     .portfolio-container {
         width: 100%;
         position: relative;
     }
+
     .portfolio-item {
         width: 50%;
         padding-right: 25px;
         padding-bottom: 10px;
         padding-top: 30px;
     }
+
     .portfolio-container-content {
         padding: 35px;
         padding-top: 50px;
     }
+
     .portfolio-about {
         p {
             font-size: 19px;
             margin-bottom: 25px;
         }
     }
+
     .portfolio-header {
         p {
             margin: 0;
         }
     }
- }
+}
 
 // Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) and (max-width: 767.98px) { 
+@media (min-width: 576px) and (max-width: 767.98px) {
     .section-portfolio {
         height: auto;
         padding-top: 70px;
         padding-bottom: 70px;
     }
-    .portfolio-bigimage, .portfolio-items, .portfolio-text-desktop {
+
+    .portfolio-bigimage,
+    .portfolio-items,
+    .portfolio-text-desktop {
         display: none;
-    } 
-    .portfolio-items-mobile, .portfolio-text-mobile {
+    }
+
+    .portfolio-items-mobile,
+    .portfolio-text-mobile {
         display: flex;
     }
+
     .portfolio-container {
         width: 100%;
         position: relative;
     }
+
     .portfolio-item {
         width: 50%;
     }
+
     .portfolio-container-content {
         padding: 35px;
         padding-top: 70px;
     }
- }
+}
 
 // Medium devices (tablets, 768px and up)
-@media (min-width: 768px) and (max-width: 991.98px) { 
+@media (min-width: 768px) and (max-width: 991.98px) {
     .portfolio-container-content {
         padding: 70px;
         padding-top: 50px;
     }
+
     .portfolio-item {
         padding-left: 0;
         padding-bottom: 0px;
         padding-right: 50px;
     }
+
     .portfolio-container {
         width: calc(100% - 120px);
         height: 60%;
     }
+
     .portfolio-bigimage {
         width: 70%;
         right: 0px;
@@ -277,28 +306,32 @@
         top: auto;
         height: 40%;
     }
+
     .portfolio-about {
         h2 {
             font-size: 22px;
         }
+
         p {
             font-size: 19px;
             margin-bottom: 10px;
         }
     }
+
     .portfolio-bigimage {
         p {
             font-size: 19px;
         }
-    } 
- }
+    }
+}
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) and (max-width: 1199.98px) { 
+@media (min-width: 992px) and (max-width: 1199.98px) {
     .portfolio-container {
         width: calc(100% - 120px);
         height: 50%;
     }
+
     .portfolio-bigimage {
         width: 70%;
         right: 0px;
@@ -306,18 +339,19 @@
         top: auto;
         height: 35%;
     }
- }
+}
 
 // Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) and (max-width: 1350.98px) { 
+@media (min-width: 1200px) and (max-width: 1350.98px) {
     .portfolio-about {
         p {
             font-size: 22px;
         }
     }
+
     .portfolio-bigimage {
-       p {
+        p {
             font-size: 22px;
         }
     }
- }
+}
